--- a/1-dars/index.html
+++ b/1-dars/index.html
@@ -10,9 +10,9 @@
 
 <body>
 
-   <a href="https://daryo.uz">salom</a> <br>
-
-   <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTTfAYCiQ6hqSAoYqSARz6BbeHpL-XyGInVFA&usqp=CAU" alt="scenery" width="300" height="200">
+    <a href="https://daryo.uz">DaryoUZ</a> <br>
+    
+    <img src="https://picsum.photos/500" alt="scenery">
 
    <h1>salom dunyo</h1>
    <h2>salom dunyo</h2>
