--- a/1-dars/index.html
+++ b/1-dars/index.html
@@ -11,17 +11,25 @@
 <body>
 
     <a href="https://daryo.uz">DaryoUZ</a> <br>
-    
+
     <img src="https://picsum.photos/500" alt="scenery">
 
-   <h1>salom dunyo</h1>
-   <h2>salom dunyo</h2>
-   <h3>salom dunyo</h3>
-   <h4>salom dunyo</h4>
-   <h5>salom dunyo</h5>
-   <h6>salom dunyo</h6>
+    <h1>salom dunyo</h1>
+    <h2>salom dunyo</h2>
+    <h3>salom dunyo</h3>
+    <h4>salom dunyo</h4>
+    <h5>salom dunyo</h5>
+    <h6>salom dunyo</h6>
 
-   <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minima, voluptatibus. Illum aliquid at delectus aliquam voluptatem veniam assumenda dolorem accusamus minima, molestias nihil, aperiam similique harum suscipit ea itaque ut sunt omnis debitis! Odio modi sit sequi odit hic tempore, dolor iusto et possimus quidem sunt veritatis pariatur! Harum reiciendis dolor dolorem assumenda, doloremque, sunt dignissimos itaque illum unde cupiditate totam blanditiis fugiat repellendus ratione hic facere vero praesentium. Dolorem quas libero laborum nam quod sint, consequatur voluptatem labore! Magnam odio iste modi, pariatur, totam impedit voluptates dignissimos et voluptatibus voluptate culpa. Magnam, voluptatibus sequi tenetur veritatis repudiandae sit cum.</p>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minima, voluptatibus. Illum aliquid at delectus aliquam
+        voluptatem veniam assumenda dolorem accusamus minima, molestias nihil, aperiam similique harum suscipit ea
+        itaque ut sunt omnis debitis! Odio modi sit sequi odit hic tempore, dolor iusto et possimus quidem sunt
+        veritatis pariatur! Harum reiciendis dolor dolorem assumenda, doloremque, sunt dignissimos itaque illum unde
+        cupiditate totam blanditiis fugiat repellendus ratione hic facere vero praesentium. Dolorem quas libero laborum
+        nam quod sint, consequatur voluptatem labore! Magnam odio iste modi, pariatur, totam impedit voluptates
+        dignissimos et voluptatibus voluptate culpa. Magnam, voluptatibus sequi tenetur veritatis repudiandae sit cum.
+    </p>
+
 </body>
 
 </html>
